--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,9 +1,14 @@
 cmake_minimum_required(VERSION 2.8)
 project(dnl)
 
-set(Boost_USE_STATIC_LIBS TRUE)
-set(Boost_ADDITIONAL_VERSIONS "1.48" "1.48.0")
+set (CMAKE_MODULE_PATH "${CMAKE_SOURCE_DIR}/cmake")
+
+if (EXISTS "${CMAKE_BINARY_DIR}/settings.cmake")
+	include(${CMAKE_BINARY_DIR}/settings.cmake)
+endif()
+
 find_package(Boost COMPONENTS regex filesystem REQUIRED)
+find_package(Event2 REQUIRED)
 
 set(source 
 	dnl.cpp dnl.h 
@@ -15,10 +20,10 @@ set(source
 	)
 
 add_library(dnl ${source})
-include_directories(utils /usr/include/db4 ${Boost_INCLUDE_DIRS})
-add_definitions(-std=c++0x -D_CRT_SECURE_NO_WARNINGS)
+include_directories(utils /usr/include/db4 ${Boost_INCLUDE_DIRS} ${Event2_INCLUDE_PATH})
+add_definitions(-std=c++0x)
 add_executable(spider main.cpp)
 target_link_libraries(spider dnl db_cxx event ${Boost_LIBRARIES})
 add_executable(test_links_extractor test_links_extractor.cpp)
-target_link_libraries(test_links_extractor dnl db_cxx event ${Boost_LIBRARIES})
+target_link_libraries(test_links_extractor dnl db_cxx ${Event2_LIBRARY} ${Boost_LIBRARIES})
 
